# lexneuro-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  LICENSE-ORIGINAL.md  README.md  compose.yaml  config-example.yaml  litellm_config-example.yaml  main.py  pyproject.toml  pyrightconfig.json
.antigravitycli/: 250888ea-3538-4a1b-9295-5dbd89fe4957.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
.opencode/: opencode.json
misc/: ARCHITECTURE.md  IMPLEMENTATION.md  TESTING.md  THOUGHTS.md
prd/: cronograma.md  jurisprudencia.md  peca.md  pesquisa.md  relatorio.md  status-dinamico.md
scripts/: check.ps1  check.sh  render-start.sh  spawn_local_ai.bat  spawn_local_ai.sh
src/: __init__.py  bot.py  config.py  db.py  main.py
src/commands/: abnt.py  cronograma.py  json_cmd.py  jurisprudencia.py  model.py  peca.py  pesquisa.py  regex.py  relatorio.py  sql_cmd.py  status.py
src/helpers/: ai_tools.py  async_utils.py  content.py  documents.py  health_server.py  llm.py  render.py  search.py  send.py  status_db.py  status_generator.py  status_scheduler.py  ui.py
src/prompts/: __init__.py  abnt.py  abnt_reference.md  cronograma.py  discord_markdown.py  discord_markdown_ref.md  jurisprudencia.py  peca.py  pesquisa.py  regex.py  relatorio.py  sql_cmd.py
tests/: test_bot_utils.py  test_config.py  test_content.py  test_cronograma.py  test_documents.py  test_health_server.py  test_jurisprudencia.py  test_peca.py  test_pesquisa.py  test_prompts.py  test_relatorio.py  test_research.py  test_send.py  test_status.py
(+18 files in other folders)
