[project]
name = "lexneuro-bot"
version = "0.1.0"
description = "Discord bot for legal research, programming assistance, ABNT compliance, and study planning with LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.2",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "markitdown[pdf,docx]>=0.1.5",
    "odfpy>=1.4.1",
    "openai>=2.33.0",
    "pandoc>=2.4",
    "pillow>=12.0.0",
    "pygments>=2.19.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
